Added sliders for global variables

--- a/index.html
+++ b/index.html
@@ -13,5 +13,21 @@
     <script src="boundary.js"></script>
   </head>
   <body>
+    <h1> Smart Rockets </h1>
+    <div id='canvasDiv'></div>
+    <table>
+      <tr>
+        <td>Life Span:
+        <td><div id='lifeSpanSlider'></div>
+      <tr>
+        <td>Anomaly Rate:
+        <td><div id='anomsSlider'></div>
+      <tr>
+        <td>Crossover Rate:
+        <td><div id='crossesSlider'></div>
+      <tr>
+        <td>Mutation Rate:
+        <td><div id='mutsSlider'></div>
+    </table>
   </body>
 </html>
