Updated website desing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Smart Rockets</title>
+    <link rel='stylesheet' type='text/css' href='style.css'>
     <script src="libraries/p5.js"></script>
     <script src="libraries/p5.dom.js"></script>
     <script src="libraries/p5.sound.js"></script>
@@ -13,21 +14,26 @@
     <script src="boundary.js"></script>
   </head>
   <body>
-    <h1> Smart Rockets </h1>
-    <div id='canvasDiv'></div>
-    <table>
-      <tr>
-        <td>Life Span:
-        <td><div id='lifeSpanSlider'></div>
-      <tr>
-        <td>Anomaly Rate:
-        <td><div id='anomsSlider'></div>
-      <tr>
-        <td>Crossover Rate:
-        <td><div id='crossesSlider'></div>
-      <tr>
-        <td>Mutation Rate:
-        <td><div id='mutsSlider'></div>
-    </table>
+    <div id='page-content'>
+      <h1> Smart Rockets </h1>
+      <p>An example of genetic algorithms.</p>
+      <div id='canvasDiv'></div>
+      <table>
+        <tr>
+          <td>Life Span:
+          <td><div id='lifeSpanSlider'></div>
+        <tr>
+          <td>Anomaly Rate:
+          <td><div id='anomsSlider'></div>
+        <tr>
+          <td>Crossover Rate:
+          <td><div id='crossesSlider'></div>
+        <tr>
+          <td>Mutation Rate:
+          <td><div id='mutsSlider'></div>
+      </table>
+      <p>Created by Gage Golish</p>
+      <p>View the project on <a href='https://github.com/ggolish/SmartRocketsP5'>GitHub</a></p>
+    </div>
   </body>
 </html>
